# pypi.run

./: .gitignore  Dockerfile  Makefile  apprunner.yaml  pyproject.toml
front/: app.vue  package-lock.json
src/pypi_run/: server.py
src/pypi_run/templates/: runner.py
